# symforge

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md  SYMFORGE_CONTEXT_AND_EXECUTION_PLAN.md  TODO.md  diff.txt  setup.bat
.claude/: circuit-breaker-state.json  gsd-file-manifest.json  harness.json  settings.json  settings.local.json
.github/: .release-please-manifest.json  release-please-config.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
_bmad-output/: project-context.md
docs/: CODE_REVIEW_2026-03-15.md  CODE_REVIEW_2026-03-16.md  PARALLELISM_REVIEW_2026-03-15.md  README.md  ROADMAP-v2.md  api-contracts.md  architecture.md  codex-integration-ceiling.md  development-guide.md  project-overview.md  project_direction.md  provider_cli_integration_research.md  provider_cli_runtime_architecture.md  release-process.md  source-tree-analysis.md  symforge_collated_improvement_brief.md  tokenizor_project_direction.md
execution/: conventional_commits.py  release_ops.py  test_conventional_commits.py  test_release_ops.py  test_task_queue.py  test_version_sync.py  version_sync.py
npm/: LICENSE  package.json
openspec/: project.md
plans/: community-feedback-improvements.md  llm-improvements-plan.md  multitenancy-index-safety.md  symforge-rename-orchestrator.md
scripts/: coordination.js  parse-handoff.cjs  setup.sh  telemetry-log.cjs  telemetry-report.cjs
src/: daemon.rs  error.rs  git.rs  hash.rs  lib.rs  main.rs  observability.rs  paths.rs  worktree.rs
src/cli/: hook.rs  (+2 more)
(+447 files in other folders)
